# transformer-ocr-llm

./: .gitignore  README.md  demo.ipynb  evaluate.py  inference.py  main.py  pyproject.toml  requirements.txt  train.py
src/evaluation/: metrics.py
src/llm_postprocessing/: refiner.py
src/models/: ocr_model.py
src/pipeline/: ocr_pipeline.py
src/preprocessing/: image_processor.py
